--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^16.4.5",
     "express": "^5.1.0",
     "mysql2": "^3.15.2",
+    "react-router-dom": "^7.9.4",
     "sequelize": "^6.37.7"
   }
 }
